# QT_Image_Manipulator

./: CMakeLists.txt  README.md  image_manipulation.py  mainwindow.cpp  mainwindow.h  mainwindow.ui
ImageManipulationTools/: CMakeLists.txt  imageprocessing.cpp  imageprocessing.h
